--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,109 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(247, 247, 247);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/*General Classes*/
+
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/*Nav Bar*/
+
+nav {
+  justify-content: space-evenly;
+  padding: 20px 0;
+  background-color: white;
+  box-shadow:0 3px 5px rgba(0, 0, 0, 0.1);
+
+}
+
+nav span {
+  font-weight: 700;
+  margin-right: 50px;
+}
+
+/*Search Input*/
+#search-data {
+  justify-content: space-around;
+  margin: 35px 0;
+}
+
+input, select, input:focus{
+  appearance: none;
+  border: none;
+  outline: none;
+}
+
+#input-canvas {
+  background-color: white;
+  padding: 10px 30px;
+  border-radius: 5px;
+  box-shadow: 0 0 5px 1px rgba(56, 56, 56, 0.103);
+}
+
+input {
+  min-width: fit-content;
+  width: 10%;
+}
+
+#input-canvas img {
+  width: 20px;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.filter-box {
+  box-shadow: 0 0 5px 1px rgba(56, 56, 56, 0.103);
+  border-radius: 5px;
+  padding: 11px;
+}
+
+
+/*Counrties*/
+
+.countries {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.country-card {
+  width: 275px;
+  margin: 30px;
+  overflow: hidden;
+  border-radius: 10px;
+  cursor: pointer;
+  box-shadow: 0 0 2px 2px rgba(83, 83, 83, 0.1);
+}
+
+.country-info {
+  margin: 25px;
+}
+
+
+
+.img-box {
+  width: 100%;
+  height: 150px;
+  background-position: center;
+  background-size: cover;
+}
+
+
+.country-card span{
+  display: block;
+}
+
+
+
